# diamonds_front

./: .env copy  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml
.claude/rules/: hello.instructions.md
.github/: copilot-instructions.md
api/: Dockerfile  data_model.py  requirements.txt  rest.py
demo/: api.py
docs/: 02-Model-Registry.md
front/: app.py  home.py  requirements.txt
front/pages/: predict.py  visualize.py
notebooks/: Decorators.ipynb  Experiement-Tracking.ipynb  unpacking.py
src/components/: DiamondCard.tsx  DiamondList.tsx
src/components/__tests__/: DiamondCard.test.tsx  DiamondList.test.tsx
src/diamonds/: data.py  mlflow_utils.py  model.py  params.py  registry.py  train.py
tests/load_tests/: async_test.py  locustfile.py  sync_test.py
