[project]
name = "diamonds"
version = "0.1.0"
description = "Preprocess & Train a model to predict diamond price"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=2.0.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mlflow (>=3.10.1,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
notebook = "^7.5.4"


[tool.poetry.group.api.dependencies]
fastapi = "^0.135.1"
locust = "^2.43.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
